# scwheelchair-simulation

./: Readme.md  Two-factor authentication.md
data_reproduction/: CMakeLists.txt  package.xml
data_reproduction/config/: data_reproduction_config.yaml
data_reproduction/launch/: data_reproduction.launch
data_reproduction/src/: data_reproduction.cpp
global_planner_plugin/: CMakeLists.txt  README.md  bgp_plugin.xml  package.xml
global_planner_plugin/src/: global_planner_plugin.cpp
input_converter/: CMakeLists.txt  package.xml
input_converter/config/: input_converter_config.yaml
input_converter/launch/: input_converter.launch  joystick_control.launch  keyboard_control.launch
input_converter/src/: input_converter_main.cpp  input_converter_node.cpp
joystick_control/: CMakeLists.txt  package.xml  readme.md
joystick_control/config/: joystick_calibration.txt  joystick_control.yaml
joystick_control/launch/: joystick_calibration.launch  joystick_control.launch
joystick_control/src/: joystick_calibration.cpp  joystick_control.cpp
joystick_filter/: CMakeLists.txt  README.md  package.xml
joystick_filter/config/: settings.yaml
joystick_filter/launch/: joystick_filter.launch
joystick_filter/src/: joystick_filter_main.cpp  joystick_filter_node.cpp
joystick_goal/: CMakeLists.txt  README.md  package.xml
joystick_goal/config/: settings.yaml
joystick_goal/include/: joystick_goal_node.h
joystick_goal/launch/: goal_navigation.launch  joystick_goal.launch
joystick_goal/src/: joystick_goal_main.cpp  joystick_goal_node.cpp
laserline/: CMakeLists.txt  package.xml
laserline/launch/: laserline.launch
laserline/src/: laser_feature_ros.cpp  main.cpp
mbot_gazebo/: README.md  package.xml
mbot_gazebo/launch/: bookstore.launch  hospital.launch  maze_mbot.launch  mbot_gazebo.launch  mbot_kinect_nav_gazebo.launch  mbot_maze.launch  museum_mbot.launch  view_bookstore.launch  view_hospital.launch  view_mbot_gazebo_bookstore.launch  view_mbot_gazebo_cafe.launch  view_mbot_gazebo_diamond.launch  view_mbot_gazebo_empty.launch  view_mbot_gazebo_empty_world.launch  view_mbot_gazebo_hospital.launch  view_mbot_gazebo_lidar_realsense_play_ground.launch  view_mbot_gazebo_museum.launch  view_mbot_gazebo_play_ground.launch  view_mbot_gazebo_pomdp_test.launch  view_mbot_gazebo_test.launch  view_mbot_realsense_museum.launch  view_mbot_with_laser_museum_gazebo.launch  view_mbot_with_realsense.launch  view_mbox_gazebo_empty.launch  view_mbox_gazebo_hospital.launch  view_nuric_gazebo_diamond.launch  view_nuric_gazebo_empty_world.launch  view_nuric_gazebo_garage.launch  view_nuric_gazebo_hospital.launch  view_nuric_gazebo_museum.launch  view_nuric_gazebo_pomdp_test.launch  view_scwheelchair_gazebo_museum.launch  view_wheelchair_demo_museum.launch  view_wheelchair_empty_world.launch
mbot_gazebo/worlds/: bookstore.world  cafe.world  crazy_maze.world  diamond.world  empty.world  garage.world  goal_belief_test.world  hospital.world  hospital_no_path.world  museum.world  pomdp_test.world  pomdp_world.world  test_scenario.world
mbot_navigation/: README.md  package.xml
mbot_navigation/config/: ekf.yaml
mbot_navigation/launch/: amcl.launch  amcl_new.launch  gmapping.launch  gmapping_demo.launch  hardware_visualization.launch  maze_bare.launch  move_base.launch  museum_bare.launch  navigation.launch  navigation_RRIS.launch  navigation_diamond.launch  navigation_hospital.launch  navigation_mrca.launch  navigation_museum.launch  navigation_pomdp.launch  navigation_test_scenario.launch  robot_localization.launch  robot_pose_ekf.launch  scan_matcher.launch
mbot_navigation/maps/: RRIS.pgm  RRIS.yaml  amcl_test.pgm  amcl_test.yaml  diamond.pgm  diamond.yaml  diamond_horizontal.pgm  diamond_horizontal.yaml  hospital.pgm  hospital.yaml  hospital_blocked.yaml  hospital_gmapping.pgm  hospital_gmapping.yaml  hospital_test.yaml  iscas_museum.pgm  iscas_museum.yaml  museum.pgm  museum.yaml  museum1.pgm  museum1.yaml  museum_.pgm  museum_.yaml  pomdp_test (copy).pgm  pomdp_test.pgm  pomdp_test.yaml  pomdp_world.pgm  pomdp_world.yaml  test_rris.pgm  test_rris.yaml  test_scenario.pgm  test_scenario.yaml  test_scenario_simple.pgm  test_scenario_simple.yaml
mbot_navigation/rviz/: gmapping.rviz  mbot_nav.rviz  mbot_shared_dwa.rviz  mrca.rviz  mrca_hardware.rviz  nav.rviz  real_wheelchair.rviz  shared_control.rviz
mbot_navigation/scripts/: cmd_vel_visualization.py  path_publisher.py  plan_size_monitor.py
path_belief_update/: CMakeLists.txt  Readme.md  package.xml
path_belief_update/backup/: belief_update_node.cpp
path_belief_update/config/: path_belief_update.yaml
path_belief_update/launch/: belief_update.launch  belief_update_mult_path.launch
path_belief_update/msg/: WaypointDistribution.msg
path_belief_update/src/: belief_update_main.cpp  belief_update_node.cpp
robot_tf/: CMakeLists.txt  README.md  package.xml
robot_tf/config/: settings.yaml
robot_tf/launch/: tf_broadcaster.launch
robot_tf/src/: odom_publisher.cpp  tf_broadcaster.cpp  turtlebot_tf_broadcaster.cpp
scan_filter/: CMakeLists.txt  README.md  package.xml
scan_filter/config/: settings.yaml
scan_filter/launch/: scan_filter.launch  scan_filter_base.launch
scan_filter/src/: scan_filter_main.cpp  scan_filter_node.cpp
scans_merger/: CMakeLists.txt  README.md  package.xml
scans_merger/config/: scans_merger_params.yaml
scans_merger/launch/: scans_merger.launch
scans_merger/src/: scans_merger.cpp  scans_merger_node.cpp
scat_master/: CMakeLists.txt  README.md  package.xml
scat_master/config/: settings.yaml
scat_master/launch/: scat_master.launch
scat_master/src/: keyboard_node.cpp  (+1 more)
serial_communication/: CMakeLists.txt  package.xml
shared_dwa/: CMakeLists.txt  README.md  Readme.txt  package.xml
shared_dwa_lz/: CMakeLists.txt  Readme.txt  package.xml
shared_mpc/: CMakeLists.txt  README.md  package.xml
sparse_voronoi/: CMakeLists.txt  README.md  package.xml
test_cmd_publisher/: CMakeLists.txt  README.md  package.xml
test_obstacle_publisher/: CMakeLists.txt  README.md  package.xml
(+406 files in other folders)
