<?xml version="1.0"?>
<package format="2">
  <name>joystick_filter</name>
  <version>0.0.0</version>
  <description>Thejoystick_filter package</description>

  <maintainer email="martijn.krijnen@ntu.edu.sg">Martijn Krijnen</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>scat_libs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>    
  <depend>geometry_msgs</depend>  
  <depend>eigen</depend>  
  <exec_depend>message_runtime</exec_depend>	

</package>
