<?xml version="1.0"?>
<package format="2">
  <name>joystick_goal</name>
  <version>0.0.0</version>
  <description>The joystick_goal package</description>

  <maintainer email="martijn.krijnen@ntu.edu.sg">Martijn Krijnen</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>  
  <depend>scat_libs</depend>  
  <depend>geometry_msgs</depend>    
  <depend>cv_bridge</depend>
  <exec_depend>message_runtime</exec_depend>	

</package>
