<?xml version="1.0"?>
<package format="2">
  <name>scan_filter</name>
  <version>0.0.0</version>
  <description>The scan_filter package</description>

  <maintainer email="ZHEN001@e.ntu.edu.sg">Lei Zhen(Ray)</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>scat_libs</depend>

  <export>

  </export>
</package>
