<?xml version="1.0"?>
<package format="2">
  <name>scat_master</name>
  <version>0.0.0</version>
  <description>The master_controller package</description>
  <maintainer email="martijn.krijnen@ntu.edu.sg">MartijnKrijnen</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>  
  <depend>scat_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>		

  <export>
  </export>
</package>
