<?xml version="1.0"?>
<package format="2">
  <name>shared_dwa</name>
  <version>0.0.0</version>
  <description>The dynamic_window_approach package</description>

  <maintainer email="martijn.krijnen@ntu.edu.sg">Martijn Krijnen</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>scat_libs</depend>  
  <depend>scat_msgs</depend>

  <depend>costmap_2d</depend>
  <depend>roslib</depend>
  <depend>tf</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>  

</package>
