<?xml version="1.0"?>
<package format="2">
  <name>shared_dwa_lz</name>
  <version>0.0.0</version>
  <description>The shared dwa package</description>

  <maintainer email="ZHEN001@e.ntu.edu.sg">Lei Zhen(Ray)</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>roscpp</build_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <export>

  </export>
</package>
