<?xml version="1.0"?>
<package format="2">
  <name>shared_mpc</name>
  <version>0.0.0</version>
  <description>The shared_mpc package</description>

  <maintainer email="martijn.krijnen@ntu.edu.sg">Martijn Krijnen</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>scat_libs</depend>  
  <depend>scat_msgs</depend>

  <depend>ipopt</depend>      
  <depend>obstacle_detector</depend>    
  <depend>laser_line_extraction</depend>  
  <depend>sparse_voronoi</depend>
  <depend>laserline</depend>

  <exec_depend>message_runtime</exec_depend>	

</package>
