<?xml version="1.0"?>
<package format="2">
  <name>test_obstacle_publisher</name>
  <version>0.0.0</version>
  <description>The package</description>

  <maintainer email="martijn.krijnen@ntu.edu.sg">Martijn Krijnen</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>    
  <depend>visualization_msgs</depend>  
  <depend>scat_msgs</depend>  
  <depend>scat_libs</depend>  
  <exec_depend>message_runtime</exec_depend>	

</package>
